--- a/geonode/templates/v2/base.html
+++ b/geonode/templates/v2/base.html
@@ -24,7 +24,7 @@
 
     {% block head %}
         <!-- Favicon -->
-        <link rel="shortcut icon" type="image/x-icon" href="{{ STATIC_URL }}v2/images/immap_favicon.png">
+        <link rel="shortcut icon" type="image/x-icon" href="{{ STATIC_URL }}v2/images/andma_favicon.png">
         <!-- Bootstrap -->
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}v2/css/bootstrap.min.css">
         <!-- Font Awesome -->
